--- a/index.html
+++ b/index.html
@@ -7,6 +7,25 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="surface-color">
+        <nav class="container">
+            <a href="#" id="logo">
+                <img src="icons/Logo.svg" alt="logomarca">
+            </a>
+        
+         <ul id="primary-menu">
+            <li>
+                <a href="#"><img src="icons/MagnifyingGlass.svg" alt="icone de lupa"></a>
+            </li>
+            <li><a href="#">Explorer</a></li>
+            <li><a href="#">Minhas viagens</a></li>
+            <li>
+               <a href="#">
+                  <img src="perfil/Profile pic40.png" alt="">
+               </a>
+            </li>
+         </ul>
+        </nav>
+    </div>
 </body>
 </html>
