--- a/index.html
+++ b/index.html
@@ -26,6 +26,34 @@
             </li>
          </ul>
         </nav>
+    
+     <header>
+        <div class="container">
+            <div id="profile">
+                <img src="perfil/Profile pic.png" alt="imagem de isabela torres">
+                <div>
+                    <h1>Isabela Torres</h1>
+                    <p>Amante de viagens, cultura e gastronomia. 🌍✈️ <br> 
+                        Aqui compartilho as histórias registradas em cada clique, explorando cantinhos fascinantes do nosso planeta a partir da movimentada cidade de São Paulo. 🏙️📸</p>
+                
+                </div>
+            </div>
+            <ul id="info">
+                <li>
+                    <img src="icons/MapPin.svg" alt="">
+                    <span>São Paulo, Brasil</span>
+                </li>
+                <li>
+                    <img src="icons/AirplaneTilt.svg" alt="">
+                    <span>37 Países</span>
+                </li>
+                <li>
+                    <img src="icons/Image.svg" alt="">
+                    <span>240 Fotos</span>
+                </li>
+            </ul>
+        </div>
+     </header>
     </div>
 </body>
 </html>
